# UU

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  UU.code-workspace
Testing/: TAG
Testing/20221223-1859/: Test.xml
UU/: ANSICode.h  AcquireReleaseGuard.h  Allocator.h  Any.h  Array.cpp  Array.h  Assertions.cpp  Assertions.h  BitBlock.h  Bits.h  ByteBuffer.h  ByteReader.h  ByteWriter.h  CloseGuard.h  Compiler.h  Context.cpp  Context.h  DynamicByteBuffer.cpp  DynamicByteBuffer.h  FileLike.cpp  FileLike.h  IString.h  IteratorWrapper.h  MappedFile.cpp  MappedFile.h  MathLike.h  Mathy.h  Platform.h  ProtoString.h  Range.h  SmallMap.h  SmallVector.cpp  SmallVector.h  Span.cpp  Span.h  Spread.cpp  Spread.h  StackTrace.cpp  StackTrace.h  StaticByteBuffer.h  (+22 more)
scratch/: scratch.cpp
test/: array_test.cpp  dynamic_byte_buffer_test.cpp  file_like_test.cpp  istring_test.cpp  math_like_test.cpp  smoke_test.cpp  span_test.cpp  spread_test.cpp  string_like_test.cpp  string_test.cpp  text_test.cpp  textref_test.cpp  unix_like_test.cpp
txt/: u.txt
